--- a/React/sugu/src/index.css
+++ b/React/sugu/src/index.css
@@ -17,3 +17,14 @@
   top: 10px;
   right: 10px;
 }
+
+
+.sidebar {
+  z-index: 10000;
+  position: fixed;
+  top: 50%;
+  right: 2px;
+  transform: translateY(-50%);
+
+  box-shadow: 0 0 3px rgba(0, 0, 10, .3);
+}
