View updated. I really enjoy react, maybe node as soon as I rebuilt JDI in React

--- a/React/sugu/src/index.css
+++ b/React/sugu/src/index.css
@@ -4,6 +4,16 @@
 }
 
 
+
+.header {
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  top: 0;
+  background-color: rgba(173, 216, 230, 0.1);
+  backdrop-filter: blur(50px);
+}
+
 .search_box input {
   outline: none
 }
